<resources>
    <string name="app_name">ILoveZappos</string>

    <string name="str_chart_title">History of bitcoin to USD transactions</string>
    <string name="str_transactions_title">Transactions</string>

    <string name="str_error_getting_transactions_history">Error during getting transaction history</string>
    <string name="str_try_again_btn">Try again</string>

    <string name="str_bids_title">Bids</string>
    <string name="str_asks_title">Asks</string>
    <string name="str_price">Price</string>
    <string name="str_value">Value</string>

    <string name="str_settings_track_price_title">Track price</string>
    <string name="str_settings_track_price_subtext">We will notify you when price is below than:</string>
    <string name="str_price_hint">Price</string>
    <string name="str_save_btn">Save</string>

    <string name="str_data_saved_notification">Price saved</string>

    <string name="str_price_channel_name">Price notification</string>
    <string name="str_price_channel_description">Notify when price became below than set target</string>
</resources>
