<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.history.TransactionGraphFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/message"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/standard_material_margin"
            android:text="@string/str_chart_title" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/transaction_chart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="208dp" />

        <ProgressBar
            android:id="@+id/progress_graph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:id="@+id/error_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/half_material_margin"
                android:text="@string/str_error_getting_transactions_history" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/try_again_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_try_again_btn" />

        </LinearLayout>

        <GridLayout
            android:id="@+id/table_layout"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:columnCount="2"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:rowCount="2"
            android:visibility="gone">

            <TextView
                android:id="@+id/bids_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="32dp"
                android:gravity="end"
                android:text="@string/str_bids_title" />

            <TextView
                android:id="@+id/asks_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="32dp"
                android:gravity="start"
                android:text="@string/str_asks_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/bids_title"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/bids_rv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/asks_rv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

        </GridLayout>

    </LinearLayout>

</ScrollView>
